Revision history for Catmandu-Stat

{{$NEXT}}

0.03  2015-06-18 10:03:08 CEST
  - adding entropy statistic
  - adding uniq count
  - adding default table layout
  - adding default keys support
  - adding examples

0.02  2015-05-18 09:35:35 CEST
  - updating dependencies
  
0.01  2015-05-13 14:49:28 CEST
  - initial release